Loading dataset with RawRecord

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(sdp_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(sdp_project main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/DataRecord.cpp dataset/DataRecord.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h)
+add_executable(sdp_project main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h)
