switchd from armadillo to Eigen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required(VERSION 3.17)
 project(sdp_project)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-find_package (Eigen3 3.4 REQUIRED NO_MODULE)
+find_package(Eigen3 3.4 REQUIRED NO_MODULE)
 
-add_executable(${PROJECT_NAME} main.cpp bin/utilities.cpp bin/LinearRegression.h bin/LinearRegression.cpp
-        bin/ModelML.h bin/ModelML.cpp) #The name of the cpp file and its path can vary
+add_executable(${PROJECT_NAME} main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h bin/utilities.cpp bin/LinearRegression.h bin/LinearRegression.cpp
+        bin/ModelML.h bin/ModelML.cpp dataset/CleanedDataset.cpp dataset/CleanedDataset.h bin/BiasDetection.cpp bin/BiasDetection.h bin/ThreadPool.cpp bin/ThreadPool.h) #The name of the cpp file and its path can vary
 
-target_link_libraries (${PROJECT_NAME} Eigen3::Eigen)
+target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
