--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD 17)
 find_package (Eigen3 3.4 REQUIRED NO_MODULE)
 
 add_executable(${PROJECT_NAME} main.cpp bin/utilities.cpp bin/LinearRegression.h bin/LinearRegression.cpp
-        bin/ModelML.h bin/ModelML.cpp) #The name of the cpp file and its path can vary
+        bin/PolynomialRegression.h bin/PolynomialRegression.cpp bin/ModelML.h bin/ModelML.cpp)
 
 target_link_libraries (${PROJECT_NAME} Eigen3::Eigen)
