--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Eigen3 3.4 REQUIRED NO_MODULE)
 
-add_executable(sdp_project main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h dataset/CleanedDataset.cpp dataset/CleanedDataset.h)
+add_executable(sdp_project main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h dataset/CleanedDataset.cpp dataset/CleanedDataset.h dataset/Attribute.h dataset/Attribute.cpp dataset/DataRecord.cpp dataset/DataRecord.h)
 
 target_link_libraries(${PROJECT_NAME} Eigen3::Eigen)
