refactor folder structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,10 @@ include_directories(${sciplot_content_SOURCE_DIR})
 # include Eigen
 find_package (Eigen3 3.4 REQUIRED NO_MODULE)
 
-add_executable(${PROJECT_NAME} main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/CleanedDataset.cpp dataset/CleanedDataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h bin/utilities.cpp
-         dataset/CleanedDataset.cpp dataset/CleanedDataset.h bin/BiasDetection.cpp bin/BiasDetection.h bin/ThreadPool.cpp bin/ThreadPool.h bin/AlternationTask.cpp bin/KFoldTask.cpp bin/Task.h bin/KFold.cpp bin/KFold.h
-        bin/utilities.cpp bin/LinearRegression.h bin/LinearRegression.cpp
-        bin/PolynomialRegression.h bin/PolynomialRegression.cpp bin/ModelML.h bin/plot_main.cpp bin/PlotML.h
-        bin/PlotML.cpp) #The name of the cpp file and its path can vary
+add_executable(${PROJECT_NAME} main.cpp dataset/Dataset.cpp dataset/Dataset.h dataset/CleanedDataset.cpp dataset/CleanedDataset.h dataset/RawDataRecord.cpp dataset/RawDataRecord.h bin/ml/utilities.cpp
+         dataset/CleanedDataset.cpp dataset/CleanedDataset.h bin/dataset_alternator/DatasetAlternator.cpp bin/dataset_alternator/DatasetAlternator.h bin/thread_pool/ThreadPool.cpp bin/thread_pool/ThreadPool.h bin/dataset_alternator/AlternationTask.cpp bin/kfold/KFoldTask.cpp bin/thread_pool/Task.h bin/kfold/KFold.cpp bin/kfold/KFold.h
+        bin/ml/utilities.cpp bin/ml/LinearRegression.h bin/ml/LinearRegression.cpp
+        bin/ml/PolynomialRegression.h bin/ml/PolynomialRegression.cpp bin/ml/ModelML.h bin/plot/plot_main.cpp bin/plot/PlotML.h
+        bin/plot/PlotML.cpp) #The name of the cpp file and its path can vary
 
 target_link_libraries (${PROJECT_NAME} Eigen3::Eigen)
